styles/style.css
/* место для вашего кода */
.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 92px 50px 96px;
}

.header__links-list {
  display: flex;
  align-items: center;
  gap: 32px;
  font-weight: 400;
  font-size: 18px;
  list-style: circle;
}

.header__link_active {
  text-decoration: none;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__logo {
  width: 148px;
  height: 105px;
}

.header__logo-image {
  height: 105px;
}

.address {
  display: flex;
  flex-direction: column;
  justify-self: end;
  align-items: flex-start;
  min-width: 240px;
  font-weight: 400;
  font-size: 18px;
  font-style: normal;
  line-height: 24.3px;
}

.cover {
  position: relative;
  min-height: 757px;
  color: white;
  background: url(../images/cover.jpg) center no-repeat;
  background-size: cover;
  z-index: -2;
}

.overlay {
  position: absolute;
  width: 100%;
  min-height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: -1;
}

.cover__title {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 165px 50px 0;
  text-transform: uppercase;
}

.aligned-text {
  font-weight: 700;
  font-size: 100px;
  line-height: 115px;
  letter-spacing: 30px;
}

.aligned-text_center {
  padding: 20px 0;
  padding-left: 30px;
  text-align: center;
}

.aligned-text_right {
  margin-right: -30px;
  text-align: right;
}

.cover__description {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 106px 50px 50px;
}

.cover__description-text {
  font-size: 22px;
  text-transform: uppercase;
  word-spacing: 18.5px;
}

.bet-button {
  border: solid 1px white;
  padding: 12px 32px;
  color: white;
  font-size: 22px;
  text-transform: uppercase;
  background: transparent;
}

.lots {
  padding: 180px 24px 0;
}

.lots__heading {
  padding-bottom: 27px;
  padding-left: 40px;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  flex-direction: row;
  gap: 25px;
  margin-bottom: 30px;
  list-style: none;
  flex-wrap: wrap;
}

.lots__card-list-item {
  width: fit-content;
  min-height: 596px;
  max-width: 31.75%;
}

.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  color: white;
  background-position: center;
  background-size: cover;
  z-index: -2;
}

.card_type_film {
  background-image: url(../images/card-lot-01.jpg);
}

.card_type_book {
  background-image: url(../images/card-lot-02.jpg);
}

.card_type_picture {
  background-image: url(../images/card-lot-03.jpg);
}

.card-link {
  text-decoration: none;
}

.card__title {
  padding: 48px 40px 0;
  font-weight: 700;
  font-size: 22px;
  text-decoration: underline;
  text-transform: uppercase;
}

.card__text {
  padding: 0 40px 48px;
  font-size: 20px;
}

.lots__look-more-link {
  padding-left: 40px;
  font-size: 20px;
}

.about {
  display: grid;
  grid-template-columns: 359px auto;
  padding: 120px 24px 180px;
}

.about__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 240px;
  margin: 35px 72px 0 47px;
  border-radius: 120px;
  background: black;
}

.about__logo-image {
  width: 148px;
}

.about__column {
  padding-top: 133px;
}

.about__title {
  padding-bottom: 100px;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
}

.about__text {
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding-right: 5px;
  font-size: 20px;
  line-height: 24px;
}

.footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 1px 50px 82px;
}

.footer .address {
  justify-self: start;
}

.footer__menu-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 18px;
  list-style: none;
}

.footer__menu-link {
  text-decoration: underline;
}

.footer__menu-link_active {
  text-decoration: none;
}

.footer__social-list {
  display: flex;
  justify-content: end;
  gap: 48px;
  list-style: none;
}

.footer__social-list-item {
  width: 48px;
}

